--- a/app/src/main/res/layout/content_alarm_creation.xml
+++ b/app/src/main/res/layout/content_alarm_creation.xml
@@ -27,13 +27,14 @@
         android:textSize="22dp"
         android:textStyle="bold" />
 
-    <Space
+    <Button
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".05"/>
+        android:layout_weight=".05"
+        android:onClick="intentGo"/>
 
     <GridView
-        android:id="@+id/gridLayout"
+        android:id="@+id/gridView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight=".8"
