Alarm broadcast receiver implemented

--- a/app/src/main/res/layout/content_alarm_creation.xml
+++ b/app/src/main/res/layout/content_alarm_creation.xml
@@ -31,6 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight=".05"
+        android:background="@android:color/transparent"
         android:onClick="intentGo"/>
 
     <GridView
