--- a/app/src/main/res/layout/activity_alarm_setting.xml
+++ b/app/src/main/res/layout/activity_alarm_setting.xml
@@ -14,6 +14,7 @@
         android:layout_weight=".05"/>
 
     <TimePicker
+        android:id="@+id/timePicker"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight=".7"
@@ -34,6 +35,7 @@
         android:text="Set alarm"
         android:textColor="@color/colorAccent"
         android:textSize="22dp"
+        android:onClick="setAlarm"
         />
     <Button
         android:layout_width="match_parent"
@@ -44,6 +46,7 @@
         android:text="Cancel"
         android:textColor="@color/colorAccent"
         android:textSize="22dp"
+        android:onClick="cancelAlarm"
         />
 
 </LinearLayout>
