setting alarm on/off from database implemented

--- a/app/src/main/res/layout/content_alarm_creation.xml
+++ b/app/src/main/res/layout/content_alarm_creation.xml
@@ -40,7 +40,8 @@
         android:layout_height="0dp"
         android:layout_weight=".8"
         android:padding="10dp"
-        android:verticalSpacing="8dp">
+        android:verticalSpacing="8dp"
+        android:horizontalSpacing="1dp">
     </GridView>
 
 
