--- a/app/src/main/res/layout/content_alarm_creation.xml
+++ b/app/src/main/res/layout/content_alarm_creation.xml
@@ -34,15 +34,13 @@
         android:background="@android:color/transparent"
         android:onClick="intentGo"/>
 
-    <GridView
-        android:id="@+id/gridView"
+    <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight=".8"
-        android:padding="10dp"
-        android:verticalSpacing="8dp"
-        android:horizontalSpacing="1dp">
-    </GridView>
+        android:padding="10dp">
+    </ListView>
 
 
 </LinearLayout>
