--- a/app/src/main/res/drawable/button_style.xml
+++ b/app/src/main/res/drawable/button_style.xml
@@ -3,7 +3,7 @@
     <item>
         <shape>
             <corners android:radius="15dp"/>
-            <stroke android:color="#f0f0f0" android:width="1dp"/>
+            <solid android:color="@color/colorAccent"/>
         </shape>
     </item>
 </selector>
