--- a/app/src/main/res/drawable/background_style.xml
+++ b/app/src/main/res/drawable/background_style.xml
@@ -3,10 +3,10 @@
 <item>
     <shape>
         <gradient
-            android:startColor="#5325CA"
-            android:centerColor="#C572FF"
+            android:startColor="#4B32C1"
             android:centerY="0.25"
-            android:endColor="#C572FF"
+            android:centerColor="#B239D4"
+            android:endColor="#B239D4"
             android:angle="270" />
     </shape>
 </item>
