--- a/app/src/main/res/drawable/svg_top_round.xml
+++ b/app/src/main/res/drawable/svg_top_round.xml
@@ -1,5 +1,5 @@
 <vector android:height="24dp" android:viewportHeight="989"
     android:viewportWidth="600" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FAFAFA"
+    <path android:fillColor="#F4F4F4"
         android:pathData="M533,0.7c-78.6,3.3 -129.5,9.4 -180.5,21.4 -85.7,20.3 -167,57.1 -229,103.8 -34.3,25.8 -75.3,65.3 -114.4,110.1l-9.1,10.4 0,371.3 0,371.3 300,-0 300,-0 0,-494.5 0,-494.5 -30.2,0.2c-16.7,0.1 -33.2,0.3 -36.8,0.5z"/>
 </vector>
