trying to fix gradle issue

--- a/app/src/main/res/layout/content_alarm_creation.xml
+++ b/app/src/main/res/layout/content_alarm_creation.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight=".9"
-        android:background="@drawable/test"
+        android:background="@drawable/svg_round_edge"
         android:weightSum="1"
         android:gravity="bottom"
         android:orientation="vertical">
