--- a/app/src/main/res/layout/activity_alarm_setting.xml
+++ b/app/src/main/res/layout/activity_alarm_setting.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/background_style"
     android:orientation="vertical"
-    tools:context=".AlarmSettingActivity"
+    tools:context=".Controllers.AlarmSettingActivity"
     android:weightSum="1">
 
     <Space
