--- a/app/src/main/res/layout/content_alarm_creation.xml
+++ b/app/src/main/res/layout/content_alarm_creation.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:weightSum="1"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".AlarmCreationActivity"
+    tools:context=".Controllers.AlarmCreationActivity"
     android:gravity="bottom"
     tools:showIn="@layout/activity_alarm_creation">
 
