--- a/app/src/main/res/layout/activity_alarm_creation.xml
+++ b/app/src/main/res/layout/activity_alarm_creation.xml
@@ -28,8 +28,8 @@
         android:orientation="vertical"
         android:weightSum="1">
 
-        <ListView
-            android:id="@+id/listView"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycleView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight=".7"
