--- a/app/src/main/res/layout/activity_alarm_creation.xml
+++ b/app/src/main/res/layout/activity_alarm_creation.xml
@@ -9,8 +9,7 @@
     android:orientation="vertical"
     android:weightSum="1"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".Controllers.AlarmCreationActivity"
-    tools:showIn="@layout/activity_alarm_creation">
+    tools:context=".Controllers.AlarmCreationActivity">
 
     <Button
         android:layout_width="match_parent"
