--- a/app/src/main/res/layout/alarm_view_item.xml
+++ b/app/src/main/res/layout/alarm_view_item.xml
@@ -14,7 +14,8 @@
     <ImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:src="@drawable/alarm_add"/>
+        android:padding="5dp"
+        android:src="@drawable/alarm_add" />
 
     <TextView
         android:id="@+id/timeText"
