--- a/app/src/main/res/drawable/background_style.xml
+++ b/app/src/main/res/drawable/background_style.xml
@@ -3,10 +3,9 @@
 <item>
     <shape>
         <gradient
-            android:startColor="#4B32C1"
+            android:startColor="@color/colorAnimationViolet"
             android:centerY="0.25"
-            android:centerColor="#B239D4"
-            android:endColor="#B239D4"
+            android:endColor="@color/colorAnimationPink"
             android:angle="270" />
     </shape>
 </item>
