--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#ffffff</color>
     <color name="colorTextDark">#2C2C2C</color>
     <color name="colorTextLight">#757575</color>
+    <color name="colorAnimationViolet">#4B32C1</color>
+    <color name="colorAnimationPink">#B239D4</color>
 </resources>
