--- a/app/src/main/res/layout/alarm_view_item.xml
+++ b/app/src/main/res/layout/alarm_view_item.xml
@@ -8,8 +8,7 @@
     android:elevation="7dp"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="20dp"
-    android:weightSum="1">
+    android:padding="20dp">
 
     <ImageView
         android:layout_width="70dp"
@@ -20,26 +19,15 @@
     <TextView
         android:id="@+id/timeText"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight=".4"
+        android:layout_height="wrap_content"
         android:text="08:00"
         android:textAlignment="center"
         android:textColor="@color/colorTextDark"
         android:textSize="24sp" />
 
-    <TextView
-        android:id="@+id/weekText"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight=".3"
-        android:text="S S M T W T F"
-        android:textAlignment="center"
-        android:textColor="@color/colorTextLight" />
-
     <Switch
         android:id="@+id/switchID"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight=".3"
+        android:layout_height="wrap_content"
         tools:checked="false" />
 </LinearLayout>
