--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,7 +18,8 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="alarmPickerStyle">
-        <item name="android:textSize">26sp</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:textSize">36sp</item>
     </style>
 
 </resources>
