--- a/app/src/main/res/layout/activity_alarm_creation.xml
+++ b/app/src/main/res/layout/activity_alarm_creation.xml
@@ -76,18 +76,13 @@
                 android:textSize="16sp" />
         </LinearLayout>
 
-        <HorizontalScrollView
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycleView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight=".5">
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycleView"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:padding="10dp"
-                android:paddingTop="10dp" />
-        </HorizontalScrollView>
+            android:layout_weight=".5"
+            android:padding="10dp"
+            android:paddingTop="10dp" />
     </LinearLayout>
 
 </LinearLayout>
